# proxmox-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-04-25-proxmox-mcp.md
src/proxmox_mcp/: __init__.py  client.py  config.py  safety.py  server.py  tools.py
tests/: conftest.py  test_client.py  test_config.py  test_docker_config.py  test_safety.py  test_server.py  test_server_settings.py  test_tools_actions.py  test_tools_admin.py  test_tools_api_request.py  test_tools_readonly.py
