[project]
name = "proxmox-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Proxmox VE"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Pedro Gonzalez" }]
dependencies = [
  "httpx>=0.27",
  "mcp>=1.2",
]
keywords = ["mcp", "proxmox", "proxmox-ve", "homelab", "virtualization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
proxmox-mcp = "proxmox_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxmox_mcp"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 140
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
